--- a/index.html
+++ b/index.html
@@ -6,14 +6,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Morgan">
-    <title>To Do List</title>
+    <title>Ten Second Math Game</title>
     <script src="js/jquery-3.5.1.min.js"></script>
+    <script src="js/underscore-esm-min.js"></script>
     <script src="js/application.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/custom.css" rel="stylesheet">
   </head>
   <body>
-    
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-6 mt-5" id="ui">
+          <h1 class="text-center text-black-50">QUICK: MATH!!!</h1>
+          <p class="d-block text-center font-weight-bold my-5" id="equation">1 + 1</p>
+          <input class="d-block mx-auto mb-3" type="text"/>
+          <div class="row" id="options">
+            <div class="col-6">
+              <label class="d-block mx-auto text-center" for="max">Max number:</label>
+              <input class="d-block mx-auto mb-0" type="range" id="max" min="10" max="50" step="1" value="10"/>
+              <p class="d-block text-center mb-3" id="max-value">(number)</p>
+            </div>
+            <div class="col-6">
+              <form class="d-block">
+                <legend class="mb-0 text-center">Operators:</legend>
+                <label class="ml-3" for="+">+</label>
+                <input type="checkbox" id="+"/>
+                <label class="ml-3" for="-">-</label>
+                <input type="checkbox" id="-"/>
+                <label class="ml-3" for="*">*</label>
+                <input type="checkbox" id="*"/>
+                <label class="ml-3" for="/">/</label>
+                <input type="checkbox" id="/"/>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
