--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
       <div class="row justify-content-center">
         <div class="col-6 mt-5" id="ui">
           <h1 class="text-center text-black-50">QUICK: MATH!!!</h1>
-          <p class="d-block text-center font-weight-bold my-5" id="equation"></p>
+          <p class="d-block text-center my-3" id="timer">Only <span class="font-weight-bold text-danger">10</span> seconds left!</p>
+          <p class="d-block text-center font-weight-bold mb-4" id="equation"></p>
           <div class="row d-flex justify-content-center mb-3">
-            <input type="text" placeholder="Type your answer here..."/>
+            <input type="text" placeholder="Type answer here..."/>
             <button class="btn btn-primary ml-1" id="start">Start!</button>
             <button class="btn btn-outline-secondary d-none ml-1" id="skip">Skip</button>
           </div>
@@ -29,7 +30,7 @@
             <div class="col-6">
               <label class="d-block mx-auto text-center" for="max">Max number:</label>
               <input class="d-block mx-auto mb-0" type="range" id="max" min="10" max="50" step="1" value="10"/>
-              <p class="d-block text-center mb-3" id="max-value">(number)</p>
+              <p class="d-block text-center mb-3" id="max-value">10</p>
             </div>
             <div class="col-6">
               <form class="d-block" id="operators">
